--- a/registro.html
+++ b/registro.html
@@ -55,17 +55,17 @@
                 <fieldset>
                     <legend class="form__label">Dirección</legend>
                     <div class="input-container">
-                        <input name="cep" id="cep" class="input" type="text" placeholder="CEP" pattern="[\s\S]{10,40}" data-tipo="direccion">
+                        <input name="cep" id="cep" class="input" type="text" placeholder="CEP" pattern="[\s\S]{10,40}" required data-tipo="direccion">
                         <label class="input-label" for="cep">Dirección completa</label>
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                     <div class="input-container">
-                        <input name="city" id="city" class="input" type="text" placeholder="Ciudad" pattern="[\s\S]{10,40}" data-tipo="ciudad">
+                        <input name="city" id="city" class="input" type="text" placeholder="Ciudad" pattern="[\s\S]{10,40}" required data-tipo="ciudad">
                         <label class="input-label" for="city">Ciudad</label>
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                     <div class="input-container">
-                        <input name="state" id="state" class="input" type="text" placeholder="Estado" pattern="[\s\S]{10,40}" data-tipo="estado">
+                        <input name="state" id="state" class="input" type="text" placeholder="Estado" pattern="[\s\S]{10,40}" required data-tipo="estado">
                         <label class="input-label" for="state">Estado</label>
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
